--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@tanstack/react-table": "^8.21.3",
     "@uidotdev/usehooks": "^2.4.1",
     "bn.js": "^5.2.1",
+    "caniuse-lite": "^1.0.30001717",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
