--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@reactflow/node-resizer": "^2.2.14",
     "@solana/web3.js": "^1.98.0",
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.59",
@@ -61,8 +62,10 @@
     "cmdk": "^1.0.0",
     "cobe": "^0.6.3",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.9.1",
+    "html-to-image": "^1.11.13",
     "input-otp": "^1.2.4",
     "jotai": "^2.12.3",
     "lucide-react": "^0.474.0",
@@ -81,9 +84,14 @@
     "react-hot-toast": "^2.5.1",
     "react-hotkeys-hook": "^4.6.1",
     "react-intersection-observer": "^9.16.0",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
+    "reactflow": "^11.11.4",
     "recharts": "^2.12.7",
+    "rehype-raw": "^7.0.0",
+    "rehype-sanitize": "^6.0.0",
+    "remark-gfm": "^4.0.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
