--- a/package.json
+++ b/package.json
@@ -82,11 +82,14 @@
     "react-intersection-observer": "^9.16.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
+    "react-tsparticles": "^2.12.2",
     "reactflow": "^11.11.4",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "tsparticles": "^3.8.1",
+    "tsparticles-slim": "^2.12.0",
     "uuid": "^9.0.1",
     "vaul": "^0.9.3",
     "zod": "^3.23.8"
