🚀 Partnership page modular refactoring complete - Created 7 modular components for easier individual editing - Updated PartnershipPage.tsx with modular architecture - Added SISO swirly animation background - Preserved all animations and responsive design - Prompt 5/5 dev branch push

--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "react-router-dom": "^6.26.2",
     "react-tsparticles": "^2.12.2",
     "reactflow": "^11.11.4",
+    "reaviz": "^16.0.4",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
