--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "vite_react_shadcn_ts",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -94,7 +93,10 @@
     "tsparticles-slim": "^2.12.0",
     "uuid": "^9.0.1",
     "vaul": "^0.9.3",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "express": "^4.18.2",
+    "node-fetch": "^2.6.7",
+    "form-data": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
